--- a/spotthedifference.css
+++ b/spotthedifference.css
@@ -6,9 +6,8 @@ body {
 
 hr {
     width: 500px;
-    height: 2px;
-
-    background-color: lightpink;
+    height: 5px;
+    background-color: solid black;
 }
 
 #secret-start {
@@ -18,7 +17,7 @@ hr {
     font-size: 32;
     font-style: bold;
     padding: 0;
-    color: red;
+    color: rgb(96, 58, 58);
 
 }
 
@@ -27,21 +26,21 @@ hr {
     height: 450;
     grid-template-columns: 3fr 3fr 3fr;
     grid-template-rows: 3fr 3fr 3fr;
-    background-color: lightpink; 
+    background-color: rgb(214, 114, 129); 
     border: 3px solid black;
     margin: 0 auto;
     display: grid;
 
 }
 
-#cell {
-    
+.cell {
+    display: grid;
     border: 5px solid;
     
 }
 
 #winning-cell {
-    background-color: green;
+    background-color: rgb(201, 65, 103);
     border: 5px solid;
 }
 
@@ -50,7 +49,7 @@ hr {
     height: 450;
     grid-template-columns: 3fr 3fr 3fr;
     grid-template-rows: 3fr 3fr 3fr;
-    background-color: blue; 
+    background-color: rgb(73, 73, 177); 
     border: 3px solid black;
     margin: 0 auto;
     display: grid;
@@ -63,14 +62,18 @@ hr {
 }
 
 #winning-cell-2 {
-    background-color: purple;
+    background-color: rgb(80, 66, 164);
     border: 5px solid;
 }
 
 #round-2 {
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 35;
+    color: rgb(96, 58, 58);
     align-items: center;
     margin: 10px;
+    border: 1;
+    background-color: white;
 }
 
 #boardThree {
@@ -78,7 +81,7 @@ hr {
     height: 450;
     grid-template-columns: 3fr 3fr 3fr;
     grid-template-rows: 3fr 3fr 3fr;
-    background-color: yellow; 
+    background-color: rgb(230, 230, 81); 
     border: 3px solid black;
     margin: 0 auto;
     display: grid;
@@ -91,25 +94,33 @@ hr {
 }
 
 #winning-cell-3 {
-    background-color: brown;
+    background-color: rgb(196, 187, 31);
     border: 5px solid;
 }
 
 #round-3 {
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 35;
+    color: rgb(96, 58, 58);
     align-items: center;
     margin: 10px;
+    border: 1;
+    background-color: white;
 }
 
 #start-button {
     font-family: 'Times New Roman', Times, serif;
+    font-size: 35;
+    color: rgb(96, 58, 58);
     align-items: center;
     margin: 10px;
+    border: 1;
+    background-color: white;
 }
 
 #player-score {
     align-items: center;
-    background-color: lightpink;
+    background-color: white;
     width: 100px;
     height: 20px;
     margin: 10px;
@@ -117,7 +128,12 @@ hr {
 }
 
 #try-again {
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 35;
+    color: rgb(96, 58, 58);
     align-items: center;
+    margin: 10px;
+    border: 1;
+    background-color: white;
 }
 
